tests/trybuild/bytes_fail.rs
use lits::bytes;

const _SIZE: u64 = bytes!("not-a-size");

fn main() {}
